--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Build artifacts
-/build/
-/build-*/
-/CMakeFiles/
-/CMakeCache.txt
-/Makefile
-/cmake_install.cmake
-/install_manifest.txt
+build/
+build-*/
+CMakeFiles/
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+install_manifest.txt
 Libraries
 
 # Compiled object files
